--- a/html/main.html
+++ b/html/main.html
@@ -7,6 +7,7 @@
     <title>성포폴이오</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="../css/common.css" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet">
 </head>
@@ -21,13 +22,16 @@
         <p class="fs-normal">Projects</p>
     </Nav>
     <div class="container">
-        <div class="row">
+        <div class="row align-items-center justify-content-between">
             <div class="col-3">
-                안녕
+                <img src="../images/ProfileImage.png" alt="Profile" style="width: 100%;">
             </div>
-            <div class="col-9">
-                <p class="fs-title fw-bold">성민제</p>
-                <p class="fs-normal fc-gray"></p>
+            <div class="col-9 px-4">
+                <p class="fs-title fw-bold mb-4">성민제</p>
+                <p class="fs-big fc-gray mb-3"><i class="fas fa-comment-dots" style="margin-right: 15px;"></i>안녕하세요! 부딪쳐가며 꾸준히 성장하는 개발자, 성민제입니다.</p>
+                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>자신이 만들고자 하는 장면을 코드를 통해 실현할 수 있는 매력 덕분에 소프트웨어 개발자의 꿈을 기르게 되었습니다.</p>
+                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>“한꺼번에 많이”가 아닌, “적지만 꾸준한” 성장을 좋아합니다.</p>
+                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>새로운 분야에 대한 도전에 주도적으로 임합니다.</p>
             </div>
         </div>
     </div>
