--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="../css/common.css" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <p class="fs-normal">Projects</p>
     </Nav>
     <div class="container">
-        <div class="row align-items-center justify-content-between">
+        <div class="row align-items-center justify-content-between mb-5">
             <div class="col-3">
                 <img src="../images/ProfileImage.png" alt="Profile" style="width: 100%;">
             </div>
@@ -32,6 +32,25 @@
                 <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>자신이 만들고자 하는 장면을 코드를 통해 실현할 수 있는 매력 덕분에 소프트웨어 개발자의 꿈을 기르게 되었습니다.</p>
                 <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>“한꺼번에 많이”가 아닌, “적지만 꾸준한” 성장을 좋아합니다.</p>
                 <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>새로운 분야에 대한 도전에 주도적으로 임합니다.</p>
+            </div>
+        </div>
+        <hr class="mb-5" style="color: #828282;">
+        <div class="row">
+            <div class="col-6 position-relative">
+                <img src="../images/Contacts.png" alt="Contacts">
+                <p class="fs-big fw-bold card-title">연락처 & 레퍼런스</p>
+            </div>
+            <div class="col-6 position-relative">
+                <img src="../images/Tech.png" alt="Tech">
+                <p class="fs-big fw-bold card-title">기술</p>
+            </div>
+            <div class="col-6 position-relative">
+                <img src="../images/Study.png" alt="Study">
+                <p class="fs-big fw-bold card-title">개인 공부</p>
+            </div>
+            <div class="col-6 position-relative">
+                <img src="../images/Projects.png" alt="Projects">
+                <p class="fs-big fw-bold card-title">수행 프로젝트</p>
             </div>
         </div>
     </div>
