--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>성포폴이오</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+        integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <link href="css/common.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
 </head>
@@ -24,39 +28,57 @@
     <div class="container">
         <div class="row align-items-center justify-content-between mb-5">
             <div class="col-3">
-                <img src="../images/ProfileImage.png" alt="Profile" style="width: 100%;">
+                <img src="images/ProfileImage.png" alt="Profile" style="width: 100%;">
             </div>
             <div class="col-9 px-4">
                 <p class="fs-title fw-bold mb-4">성민제</p>
-                <p class="fs-big fc-gray mb-3"><i class="fas fa-comment-dots" style="margin-right: 15px;"></i>안녕하세요! 부딪쳐가며 꾸준히 성장하는 개발자, 성민제입니다.</p>
-                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>자신이 만들고자 하는 장면을 코드를 통해 실현할 수 있는 매력 덕분에 소프트웨어 개발자의 꿈을 기르게 되었습니다.</p>
-                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>“한꺼번에 많이”가 아닌, “적지만 꾸준한” 성장을 좋아합니다.</p>
-                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>새로운 분야에 대한 도전에 주도적으로 임합니다.</p>
+                <p class="fs-big fc-gray mb-3"><i class="fas fa-comment-dots" style="margin-right: 15px;"></i>안녕하세요!
+                    부딪쳐가며 꾸준히 성장하는 개발자, 성민제입니다.</p>
+                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>자신이 만들고자 하는
+                    장면을 코드를 통해 실현할 수 있는 매력 덕분에 소프트웨어 개발자의 꿈을 기르게 되었습니다.</p>
+                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>“한꺼번에 많이”가 아닌,
+                    “적지만 꾸준한” 성장을 좋아합니다.</p>
+                <p class="fs-small fc-gray mb-2"><i class="fas fa-circle" style="margin-right: 10px;"></i>새로운 분야로의 도전에
+                    주도적으로 임합니다.</p>
             </div>
         </div>
         <hr class="mb-5" style="color: #828282;">
-        <div class="row">
-            <div class="col-6 position-relative">
-                <img src="../images/Contacts.png" alt="Contacts">
-                <p class="fs-big fw-bold card-title">연락처 & 레퍼런스</p>
+        <div class="row w-100">
+            <div class="col-6 position-relative p-3">
+                <div class="w-100 link-card">
+                    <img src="images/Contacts.png" alt="Contacts" class="w-100">
+                    <p class="fs-big fw-bold card-title">연락처 & 레퍼런스</p>
+                </div>
             </div>
-            <div class="col-6 position-relative">
-                <img src="../images/Tech.png" alt="Tech">
-                <p class="fs-big fw-bold card-title">기술</p>
+            <div class="col-6 position-relative p-3">
+                <div class="w-100 link-card">
+                    <img src="images/Tech.png" alt="Tech" class="w-100 p-tech bc-dark">
+                    <p class="fs-big fw-bold card-title">기술</p>
+                </div>
             </div>
-            <div class="col-6 position-relative">
-                <img src="../images/Study.png" alt="Study">
-                <p class="fs-big fw-bold card-title">개인 공부</p>
+            <div class="col-6 position-relative p-3">
+                <div class="w-100 link-card">
+                    <img src="images/Study.png" alt="Study" class="w-100 p-study bc-dark">
+                    <p class="fs-big fw-bold card-title">개인 공부</p>
+                </div>
             </div>
-            <div class="col-6 position-relative">
-                <img src="../images/Projects.png" alt="Projects">
-                <p class="fs-big fw-bold card-title">수행 프로젝트</p>
+            <div class="col-6 position-relative p-3">
+                <div class="w-100 link-card">
+                    <img src="images/Projects.png" alt="Projects" class="w-100">
+                    <p class="fs-big fw-bold card-title">수행 프로젝트</p>
+                </div>
             </div>
         </div>
     </div>
-</body>
+    <footer>
+        <p class="fc-gray fs-big">@MinSungJe</p>
+        <p class="fc-gray">https://github.com/MinSungJe</p>
+    </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+</body>
+
 </html>
