[feat] Navbar btn 마우스 hover 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
 <body>
     <Nav class="nav-container">
         <p class="fs-title fw-bold">성포폴이오</p>
-        <p class="fs-normal">Main</p>
-        <p class="fs-normal">Contacts</p>
-        <p class="fs-normal">Tech</p>
-        <p class="fs-normal">Study</p>
-        <p class="fs-normal">Projects</p>
+        <button class="nav-btn">
+            <p class="fs-big">Main</p>
+        </button>
+        <button class="nav-btn">
+            <p class="fs-big">Contacts</p>
+        </button>
+        <button class="nav-btn">
+            <p class="fs-big">Tech</p>
+        </button>
+        <button class="nav-btn">
+            <p class="fs-big">Study</p>
+        </button>
+        <button class="nav-btn">
+            <p class="fs-big">Projects</p>
+        </button>
     </Nav>
     <div class="container">
         <div class="row align-items-center justify-content-between mb-5">
