[feat] Navbar, Link-card 페이지 간 이동 기능 추가

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 
 <body>
     <Nav class="nav-container">
-        <p class="fs-title fw-bold">성포폴이오</p>
-        <button class="nav-btn">
-            <p class="fs-big">Main</p>
-        </button>
+        <div class="nav-title"><p class="fs-title fw-bold">성포폴이오</p></div>
         <button class="nav-btn">
             <p class="fs-big">Contacts</p>
         </button>
@@ -85,6 +82,7 @@
         <p class="fc-gray">https://github.com/MinSungJe</p>
     </footer>
 
+    <script src="js/Navbar.js"></script>
     <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
