--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -1,1 +1,49 @@
-Projects
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>성포폴이오</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+        integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+    <link href="../css/common.css" rel="stylesheet">
+</head>
+
+<body>
+    <Nav class="nav-container">
+        <div class="nav-title"><p class="fs-title fw-bold">성포폴이오</p></div>
+        <button class="nav-btn">
+            <p class="fs-big">Contacts</p>
+        </button>
+        <button class="nav-btn">
+            <p class="fs-big">Tech</p>
+        </button>
+        <button class="nav-btn">
+            <p class="fs-big">Study</p>
+        </button>
+        <button class="nav-btn">
+            <p class="fs-big">Projects</p>
+        </button>
+    </Nav>
+    <div class="container">
+        Projects
+    </div>
+    <footer>
+        <p class="fc-gray fs-big">@MinSungJe</p>
+        <p class="fc-gray">https://github.com/MinSungJe</p>
+    </footer>
+
+
+    <script src="../js/Navbar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
