[feat] Contacts 페이지 완성

--- a/pages/Contacts.html
+++ b/pages/Contacts.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <link href="../css/common.css" rel="stylesheet">
+    <link href="../css/contacts.css" rel="stylesheet">
 </head>
 
 <body>
@@ -32,7 +33,39 @@
         </button>
     </Nav>
     <div class="container">
-        Contacts
+        <p class="fs-title fw-bold">연락처</p>
+        <hr>
+        <div class="contacts-container">
+            <div class="img-container">
+                <img src="../images/ContactsImg.png" alt="ContactsImg">
+            </div>
+            <div class="card-container">
+                <div class="contacts-card">
+                    <img src="../images/telephone.png" alt="phone" class="h-100 me-5">
+                    <div>
+                        <p class="fs-title fw-bold">Phone</p>
+                        <hr>
+                        <p class="fs-big">010-0000-0000</p>
+                    </div>
+                </div>
+                <div class="contacts-card">
+                    <img src="../images/github.png" alt="github" class="h-100 me-5">
+                    <div>
+                        <p class="fs-title fw-bold">Github</p>
+                        <hr>
+                        <p class="fs-big">https://github.com/MinSungJe</p>
+                    </div>
+                </div>
+                <div class="contacts-card">
+                    <img src="../images/mail.png" alt="email" class="h-100 me-5">
+                    <div>
+                        <p class="fs-title fw-bold">E-mail</p>
+                        <hr>
+                        <p class="fs-big">minje813@naver.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <p class="fc-gray fs-big">@MinSungJe</p>
