[fix] Contacts 관련 class명 수정

--- a/pages/Contacts.html
+++ b/pages/Contacts.html
@@ -18,7 +18,9 @@
 
 <body>
     <Nav class="nav-container">
-        <div class="nav-title"><p class="fs-title fw-bold">성포폴이오</p></div>
+        <div class="nav-title">
+            <p class="fs-title fw-bold">성포폴이오</p>
+        </div>
         <button class="nav-btn">
             <p class="fs-big">Contacts</p>
         </button>
@@ -36,10 +38,10 @@
         <p class="fs-title fw-bold">연락처</p>
         <hr>
         <div class="contacts-container">
-            <div class="img-container">
+            <div class="contacts-img-container">
                 <img src="../images/ContactsImg.png" alt="ContactsImg">
             </div>
-            <div class="card-container">
+            <div class="contacts-card-container">
                 <div class="contacts-card">
                     <img src="../images/telephone.png" alt="phone" class="h-100 me-5">
                     <div>
