[feat] Card Component 디자인 추가, Study 페이지 완성

--- a/pages/Study.html
+++ b/pages/Study.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <link href="../css/common.css" rel="stylesheet">
+    <link href="../css/study.css" rel="stylesheet">
 </head>
 
 <body>
@@ -32,7 +33,37 @@
         </button>
     </Nav>
     <div class="container">
-        Study
+        <p class="fs-title fw-bold">개인 공부</p>
+        <hr>
+        <div class="card-container">
+            <div class="info-card">
+                <div class="card-img-container">
+                    <img src="../images/web.png" alt="web">
+                </div>
+                <div class="card-desc-container">
+                    <p class="fs-title fw-bold mb-3">Web_FrontEnd</p>
+                    <p class="fs-big fc-gray">프론트엔드 역량 증가를 위해 웹 프로그래밍 공부를 시작했습니다.</p>
+                </div>
+            </div>
+            <div class="info-card">
+                <div class="card-img-container">
+                    <img src="../images/ps.png" alt="ps">
+                </div>
+                <div class="card-desc-container">
+                    <p class="fs-title fw-bold mb-3">Problem Solving / Algorithm</p>
+                    <p class="fs-big fc-gray">기초적인 코딩 학습역량을 갖추고 논리적 사고력의 증진을 위해 알고리즘 공부를 시작했습니다.</p>
+                </div>
+            </div>
+            <div class="info-card">
+                <div class="card-img-container">
+                    <img src="../images/game.png" alt="game">
+                </div>
+                <div class="card-desc-container">
+                    <p class="fs-title fw-bold mb-3">Game</p>
+                    <p class="fs-big fc-gray">게임 엔진에 관심이 생겨 Godot, Unity를 Udemy 강의를 통해 공부했습니다.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <p class="fc-gray fs-big">@MinSungJe</p>
