--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
         <hr class="mb-5" style="color: #828282;">
         <div class="row w-100">
             <div class="col-6 position-relative p-3">
-                <div class="w-100 link-card">
+                <div class="w-100 index-link-card">
                     <img src="images/Contacts.png" alt="Contacts" class="w-100">
                     <p class="fs-big fw-bold card-title">연락처 & 레퍼런스</p>
                 </div>
             </div>
             <div class="col-6 position-relative p-3">
-                <div class="w-100 link-card">
+                <div class="w-100 index-link-card">
                     <img src="images/Tech.png" alt="Tech" class="w-100 p-tech bc-dark">
                     <p class="fs-big fw-bold card-title">기술</p>
                 </div>
             </div>
             <div class="col-6 position-relative p-3">
-                <div class="w-100 link-card">
+                <div class="w-100 index-link-card">
                     <img src="images/Study.png" alt="Study" class="w-100 p-study bc-dark">
                     <p class="fs-big fw-bold card-title">개인 공부</p>
                 </div>
             </div>
             <div class="col-6 position-relative p-3">
-                <div class="w-100 link-card">
+                <div class="w-100 index-link-card">
                     <img src="images/Projects.png" alt="Projects" class="w-100">
                     <p class="fs-big fw-bold card-title">수행 프로젝트</p>
                 </div>
