--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -32,7 +32,37 @@
         </button>
     </Nav>
     <div class="container">
-        Projects
+        <p class="fs-title fw-bold">수행 프로젝트</p>
+        <hr>
+        <div class="card-container">
+            <div class="link-card">
+                <div class="card-img-container">
+                    <img src="../images/noAutoCode.png" alt="noAutoCode">
+                </div>
+                <div class="card-desc-container">
+                    <p class="fs-title fw-bold mb-3">NoAutoCode!!!</p>
+                    <p class="fs-big fc-gray">VScode에서 코드의 자동완성 기능과 설명 팝업 설정을 키거나 끌 수 있는 프로그램</p>
+                </div>
+            </div>
+            <div class="link-card">
+                <div class="card-img-container">
+                    <img src="../images/dnow.png" alt="dnow">
+                </div>
+                <div class="card-desc-container">
+                    <p class="fs-title fw-bold mb-3">동국대학교 공지사항 알리미 서비스 DNOW</p>
+                    <p class="fs-big fc-gray">동국대학교 학생들의 공지사항 및 학사일정 인지를 돕기 위한 알림 웹 애플리케이션</p>
+                </div>
+            </div>
+            <div class="link-card">
+                <div class="card-img-container">
+                    <img src="../images/portfolio.png" alt="portfolio">
+                </div>
+                <div class="card-desc-container">
+                    <p class="fs-title fw-bold mb-3">성포폴이오</p>
+                    <p class="fs-big fc-gray">🙋‍♂️ Let me Introduce Myself !!</p>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <p class="fc-gray fs-big">@MinSungJe</p>
