--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -71,6 +71,7 @@
 
 
     <script src="../js/Navbar.js"></script>
+    <script src="../js/Projects.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
