[feat] 기술 페이지 완성

--- a/pages/Tech.html
+++ b/pages/Tech.html
@@ -13,11 +13,14 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <link href="../css/common.css" rel="stylesheet">
+    <link href="../css/tech.css" rel="stylesheet">
 </head>
 
 <body>
     <Nav class="nav-container">
-        <div class="nav-title"><p class="fs-title fw-bold">성포폴이오</p></div>
+        <div class="nav-title">
+            <p class="fs-title fw-bold">성포폴이오</p>
+        </div>
         <button class="nav-btn">
             <p class="fs-big">Contacts</p>
         </button>
@@ -32,7 +35,118 @@
         </button>
     </Nav>
     <div class="container">
-        Tech
+        <p class="fs-title fw-bold">기술</p>
+        <hr>
+        <div class="tech-container">
+            <div class="tech-row">
+                <p class="fs-big fc-gray fw-bold">Problem Solving / Algorithm</p>
+                <div class="tech-card-row">
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/python.png" alt="python">
+                            <p class="fs-big fw-bold mt-3">Python</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/java.png" alt="java">
+                            <p class="fs-big fw-bold mt-3">Java</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="tech-row">
+                <p class="fs-big fc-gray fw-bold">Web Programming</p>
+                <div class="tech-card-row">
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/html.png" alt="html">
+                            <p class="fs-big fw-bold mt-3">HTML</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/css.png" alt="css">
+                            <p class="fs-big fw-bold mt-3">CSS</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/javascript.png" alt="javascript">
+                            <p class="fs-big fw-bold mt-3">JavaScript</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/react.png" alt="react">
+                            <p class="fs-big fw-bold mt-3">React</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/nextjs.png" alt="nextjs">
+                            <p class="fs-big fw-bold mt-3">Next.js</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="tech-row">
+                <p class="fs-big fc-gray fw-bold">Game</p>
+                <div class="tech-card-row">
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/csharp.png" alt="csharp">
+                            <p class="fs-big fw-bold mt-3">C#</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/unity.png" alt="unity">
+                            <p class="fs-big fw-bold mt-3">Unity</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/godot.png" alt="godot">
+                            <p class="fs-big fw-bold mt-3">Godot</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="tech-row">
+                <p class="fs-big fc-gray fw-bold">etc</p>
+                <div class="tech-card-row">
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/github.png" alt="github">
+                            <p class="fs-big fw-bold mt-3">Git/Github</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/notion.png" alt="notion">
+                            <p class="fs-big fw-bold mt-3">Notion</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/figma.png" alt="figma">
+                            <p class="fs-big fw-bold mt-3">Figma</p>
+                        </div>
+                    </div>
+                    <div class="tech-card-grid">
+                        <div class="tech-card">
+                            <img src="../images/docker.png" alt="docker">
+                            <p class="fs-big fw-bold mt-3">Docker</p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </div>
     </div>
     <footer>
         <p class="fc-gray fs-big">@MinSungJe</p>
